--- a/docs/Fe/对象基础.md
+++ b/docs/Fe/对象基础.md
@@ -1,4 +1,4 @@
-# 对象
+# 对象基础
 对象的属性分为两种类型，数据属性和访问器属性  
 属性具有一些内部才可用的特征，JS不能直接访问它们
 ## 数据属性
@@ -26,3 +26,33 @@ alert(person.name);  //Nicholas
 ```
 在非严格模式下，尝试为不可修改的属性指定新值，将什么都不会发生，在严格模式下会出错。对于不可配置的属性也类似。一旦把属性定义为不可配置，它就不能再被改回可配置了，此外，再次调用defineProperty修改除了Writable之外的特性都会产生错误：不能重复定义（**这里需要补充一下，红宝书所言是，修改除writable之外的特性会导致产生错误，然而实际上，在writable为true时修改value是没有问题的**）。最后，不指定描述符的情况下，其值默认为false
 ## 访问器属性
+不包含数据值，而是一对getter和setter函数，在读取访问器属性时会调用getter函数，写入访问器属性时，会调用setter函数。访问器拥有如下四个特性：
+#### configureable
+与数据属性的特征相同，表示能否通过删除属性从而重新定义属性，或能否将属性修改为数据属性。直接在对象上定义的属性，这个特征的默认值为true
+#### enumerable
+能否通过for-in枚举此属性
+#### get
+读取属性时调用的函数，默认值为undefined
+#### set
+写入属性时调用的函数，默认值为undefined
+### 定义访问器
+访问器属性不能直接定义，必须使用Object.defineProperty()来定义：
+```
+var book = {
+    _year: 2004,
+    edition: 1
+};
+
+Object.defineProperty(book, "year", {
+    get: function(){
+        return this._year;
+    },
+    set: function(newVal){
+        if(newVal > 2004){
+            this._year = newVal;
+            this.edition += newVal - 2004;
+        }
+    }
+})
+```
+以上代码创建了一个book对象，定义了两个默认属性_year和edition（_year前的下划线是一种常用记号，表示只能通过对象方法访问这个属性。而访问器属性year则包含getter和setter函数，这是访问器属性的常见用法，即设置一个属性时会导致其他属性发生变化
