--- a/docs/Fe/对象基础.md
+++ b/docs/Fe/对象基础.md
@@ -56,3 +56,32 @@ Object.defineProperty(book, "year", {
 })
 ```
 以上代码创建了一个book对象，定义了两个默认属性_year和edition（_year前的下划线是一种常用记号，表示只能通过对象方法访问这个属性。而访问器属性year则包含getter和setter函数，这是访问器属性的常见用法，即设置一个属性时会导致其他属性发生变化
+## 定义多个属性
+Object.defineProperties()用于一次性定义多个属性。接收两个对象参数，第一个对象时要添加和修改其属性的对象，第二个对象的属性与第一个对象中要添加或修改的属性一一对应，听起来很复杂，通过一个例子来说明：
+```
+var book = {};
+
+Object.defineProperties(book, {
+    _year: {
+        value: 2004
+    },
+
+    edition: {
+        value: 1
+    },
+    year: {
+        get: function(){
+            return this._year;
+        },
+        set: function(newVal){
+            if(newVal > 2004){
+                this._year = newVal;
+                this.edition += newVal - 2004;
+            }
+        }
+    }
+});
+```
+上述代码定义了与上一个例子相同的book对象
+## 读取属性的特性
+Object.getOwnPropertyDescriptor()用于取得给定属性的描述符，它接收两个参数，属性所在对象和要读取的属性名称。将会返回一个对象，包含属性名为各特性的值
