--- a/docs/Fe/继承和原型链.md
+++ b/docs/Fe/继承和原型链.md
@@ -70,6 +70,25 @@ SuperType.prototype.sayName = function(){
 }
 
 function SubType(name, age){
-    
+    SuperType.call(this.name);
+
+    this.age = age;
 }
+
+SubType.prototype = new SuperType();
+SubType.prototype.sayAge = function(){
+    alert(this.age);
+};
+
+var instance1 = new SubType("Nicholas", 29);
+instance1.colors.push("black");
+alert(instance1.colors); //red, blue, green, black
+instance1.sayName(); // "Nicholas"
+instance1.sayAge(); // 29
+
+var instance2 = new SubType("Gerg", 27);
+alert(instance2.colors); // red, blue, green
+instance2.sayName(); //"Gerg"
+instance2.sayAge(); // 27
 ```
+像本例这样，在子类的原型中定义公用方法，结合借用构造函数（超类构造函数的参数在此时传递），让不同的子类拥有自己的引用类型属性。这是最常用的继承模式
