--- a/docs/Fe/其他继承.md
+++ b/docs/Fe/其他继承.md
@@ -52,3 +52,36 @@ SubType.prototype.sayAge = function(){
 };
 
 ```
+通过借用构造函数来继承属性,通过原型链的混成形式来继承方法：不必为了指定子类型的原型二调用超类的构造函数，我们需要的无非就是超类原型的一个副本。基本模式如下：
+```
+function inheritPrototype(subType, superType){
+    var prototype = object(superType.prototype);
+    prototype.constructor = subType;
+    subType.prototype = prototype
+}
+```
+第一步是创建超类型原型的一个副本，第二步是为创建的副本添加constructor属性，从而弥补因重写原型而失去的默认constructor，最后一步将新创建的对象赋给子类型的原型。具体用例：
+```
+function SuperType(name){
+    this.name = name;
+    this.colors = ["red", "blue", "green"];
+}
+
+SuperType.prototype.sayName = function(){
+    alert(this.name);
+}
+
+function SubType(name, age){
+    SuperType.call(this.name); 
+
+    this.age = age;
+}
+
+inheritPrototype(SubType, SuperType);
+// 代替之前为子类原型赋值的语句
+
+SubType.prototype.sayAge = function(){
+    alert(this.age);
+};
+```
+寄生式组合继承被普遍认为是引用类型最理想的继承范式！
