--- a/docs/Fe/13事件.md
+++ b/docs/Fe/13事件.md
@@ -4,6 +4,7 @@
 DOM2级事件规定事件流包括三个阶段：事件捕获，处于目标阶段和事件冒泡阶段。首先发生事件捕获，此阶段实际目标元素不会接收到事件，接下来才是处于目标和冒泡阶段。
 ## 事件处理程序
 事件处理程序以on开头，元素上设置的onclick处理程序有权调用全局作用域的任何方法，原理是使用with扩展了作用域。这样指定事件处理程序时，会创建一个封装了元素属性的函数，此函数拥有局部变量event，也就是事件对象。函数中，this值等于事件的目标元素，这样事件处理程序就能很方便的访问自己的属性。
+
 ---
 通过js指定事件处理程序：
 ```
@@ -117,3 +118,48 @@ EventUtil.addHandler(window, "beforeunload", function(event){
 DOMContentLoaded事件，在完整形成DOM树的时候就触发而不是像load事件那样，所有东西加载完才触发。
 
 pageshow和pagehide是在后退和前进的时候，页面完全恢复或是消失的时候触发
+
+### 一些设备事件
+
+比如设备角度还有运动状态啥的
+
+### 触摸事件
+
+移动端发生的事件，虽然不在DOM规定内，却是兼容DOM的。
+
+touchstart：触摸屏幕时触发
+
+touchmove：滑动时触发，此事件期间可以调用preventDevault组织滑动
+
+touchend：手指离开屏幕
+
+## 事件委托
+
+避免过多的事件处理程序导致性能下降，利用事件冒泡，只通过一个事件处理程序来管理一类型的所有事件。
+
+```js
+var list = document.getElementById("myLinks");
+
+EventUtil.addHandler(list, "click", function(event){
+  	event = EventUtil.getEvent(event);
+  	var target = EventUtil.getTarget(event);
+  
+  	switch(target.id){
+      case "doSth":
+        document.title = "title changed";
+        break;
+      case "go":
+        location.href = "xxx.xxx.xxx";
+        break;
+      case "hi":
+        alert("hi");
+        break;
+    }
+});
+```
+
+在移除具有事件的元素时，先移除它的事件处理程序以便释放内存
+
+## 模拟事件
+
+通过createEvent模拟鼠标事件，它有15个参数，我认为具体使用时再查阅。此外，还有键盘事件的模拟
