--- a/docs/Fe/14表单脚本.md
+++ b/docs/Fe/14表单脚本.md
@@ -1,1 +1,103 @@
 # 表单脚本
+
+form元素的独特功能，可以自动地提交用户输入信息。通过action指定请求URL，method指定http请求类型，name指定表单名称。submit方法可以提交表单，另外，form中type为submit的按钮自动承载submit的功能：
+
+```html
+<input type="submit" value="Submit Form">
+<button type="submit">
+  Submit Form
+</button>
+<input type="image" src="img">
+```
+
+只要表单中存在上面一种按钮，它们就会自动地成为提交动作。这样提交表单的行为属于事件的默认行为，如果需要检查表单数据，使用preventDefault阻止这个行为：
+
+```js
+var form = document.getElementById("myForm");
+EventUtil.addHandler(form, "submit", function(event){
+  event = EventUtil.getEvent(event);
+  EventUtil.preventDefauklt(event);
+});
+// 检查表单内容
+form.submit(); // 手动提交
+```
+
+## 重复提交/重置
+
+解决用户重复提交表单问题，可以在第一次提交后禁用提交按钮，或是使用onsubmit事件处理程序取消后续的表单提交操作。
+
+重置表单，可以设置type为reset的input或button，或是在表单对象上调用reset方法
+
+## 取得表单字段
+
+除了常规取得元素的方法，表单元素还有一个elements属性，里面保存了所有表单字段（按照出现顺序）：
+
+```js
+var form = document.getElementById("form1");
+
+var field1 = form.elements[0];
+
+var field2 = form.elements["textbox1"];
+
+var fieldCount = form.elements.length;
+```
+
+如果多个表单控件使用了相同的name值，就会返回nodeList
+
+表单字段拥有如下属性：
+
+disabled指示当前字段是否禁用
+
+form指向当前字段所属的表单指针
+
+name，当前字段名称
+
+type，当前字段类型，checkbox，radio等
+
+value，保存的值
+
+上面说的，避免重复提交，就是设置disabled属性：
+
+```js
+var btn = target.elements["submit-btn"];
+btn.disabled = true;
+```
+
+可以使用focus和blur操作表单字段
+
+## 文本框
+
+textarea和type为text的input都算是文本框，一个是多行一个是单行。
+
+使用select方法选中文本框内的所有文本（例如在文本框获得焦点的时候调用，让用户不必一个一个删除默认文本）
+
+还有select事件，在选择了文本框的文本时就会触发。h5提供了selectionStart和selectionEnd两个属性记录选择的位置，提供setSelectionRange方法用于选中部分文本
+
+### 过滤输入
+
+例如一个只允许数字输入的文本框，可以通过阻止默认来屏蔽输入：
+
+```js
+EventUtil.addHandler(textbox, "keypress", function(event){
+  event = EventUtil.getTarget(event);
+  var charCode = EventUtil.getCharCode(event);
+  
+  if(!/\d/.test(String.formCharCode(charCode))){
+    EventUtil.preventDefault(event);
+  }
+});
+```
+
+上面的正则并不完美，因为退格键也被屏蔽了。
+
+### 剪切板操作
+
+感觉红宝书讲的有点老，查了一下新的[剪切板操作](https://www.ruanyifeng.com/blog/2021/01/clipboard-api.html)。
+
+### 自动切换焦点
+
+主要思路就是监听keyup事件，当输入长度达到文本框最大长度后focus下一个文本框
+
+### 选择框
+
+摆烂了，后面的富文本编辑和15章的canvas不看了
