--- a/docs/Fe/14表单脚本.md
+++ b/docs/Fe/14表单脚本.md
@@ -100,4 +100,6 @@ EventUtil.addHandler(textbox, "keypress", function(event){
 
 ### 选择框
 
-摆烂了，后面的富文本编辑和15章的canvas不看了
+摆烂了，后面的富文本编辑和15章的canvas不看了。
+
+16章讲了拖拽事件和媒体元素，摆
