--- a/docs/Fe/22高级技巧.md
+++ b/docs/Fe/22高级技巧.md
@@ -243,4 +243,5 @@ Object.isSealed()检查是否密封
 
 ### 冻结对象
 
-冻结对象是密封的，且数据属性的Writable为false。如果定义了【set】函数，访问器属性仍然是可写的。Object.freeze()用于冻结对象
+冻结对象是密封的，且数据属性的Writable为false。如果定义了【set】函数，访问器属性仍然是可写的。Object.freeze()用于冻结对象，Object.isFrozen()检查是否冻结
+
