--- a/docs/Fe/react/类.md
+++ b/docs/Fe/react/类.md
@@ -3,6 +3,8 @@
 
 类是特殊的函数，是用于创建对象的模板。和定义函数表达式和函数声明类似，类也有两种定义方式，类表达式和类声明。
 
+类是一级公民（能被当作值来用的就是一级公民）此特性让js独一无二
+
 ### 类声明
 
 class关键字用于声明一个类，需要注意，类声明没有提升，与函数声明提升区别
@@ -141,6 +143,156 @@ user.name = ""; // setter 抛出一个错误
 
 getter和setter必须同时出现同级出现
 
+### 成员名
+
+成员名可以计算得出，通过方括号把要计算的变量扩起来：
+
+```js
+let methodName = "sayName";
+
+class PersonClass{
+  constructor(name){
+    this.name = name;
+  }
+  [methodName](){
+    console.log(this.name);
+  }
+}
+let me = new PersonClass("Nicholas");
+me.sayname(); //Nicholas
+```
+
+
+
 ## this绑定
 
-由于原型方法和静态方法总是在严格模式运行，它们的this默认是undefined的
+由于原型方法和静态方法总是在严格模式运行，它们的this默认是undefined，虽然new操作会：
+
+1. 创建一个空的简单JavaScript对象（即`**{}**`）；
+2. 为步骤1新创建的对象添加属性**__proto__**，将该属性链接至构造函数的原型对象
+3. 将步骤1新创建的对象作为`**this**`的上下文 ；
+4. 如果该函数没有返回对象，则返回`**this**`。
+
+但是当出现单独调用的情况就会导致this没有正确地指向实例。例如react事件回调需要绑定，原理其实就是它的事件处理方法被作为回调函数绑定了。react的jsx等价于React.createElement，而这个方法大概是这样的：
+
+```js
+function createElement(dom, params) {
+  var domObj = document.createElement(dom);
+  domObj.onclick = params.onclick;
+  domObj.innerHTML = params.conent;
+  return domObj
+}
+```
+
+params就是组件实例，我们定义在上面的onclick方法作为回调函数绑定在实际的dom元素上，导致事件处理方法中的this丢失了params（也就是组件实例）的引用。在事件处理方法上绑定this就可以让this始终指向组件实例。使用箭头函数同样可以让this指向正确。
+
+## 与ES5的类型联系
+
+一个ES5的模式：
+
+```js
+function PersonType(name){
+  this.name = name;
+}
+
+// 静态方法
+PersonType.create = function(name){
+  return new PersonType(name);
+};
+
+// 实例方法
+PersonType.prototype.sayName = function(){
+  console.log(this.name);
+};
+
+var person = PersonType.create("Nicholas");
+```
+
+和它等价的ES6写法如下：
+
+```js
+class PersonClass{
+  //等价于PersonType构造器
+  constructor(name){
+    this.name = name;
+  }
+  
+  //等价于PersonType.prototype.sayName
+  sayName(){
+    console.log(this.name);
+  }
+  
+  //等价于PersonType.create
+  static create(name){
+    return new PersonClass(name);
+  }
+}
+
+let person = PersonClass.create("Nicholas");
+```
+
+静态成员不能用实例来访问，始终需要通过类来访问（好像前面说过了）
+
+## 派生类继承
+
+ES6之前实现自定义类型的继承是个繁琐的过程。例如：
+
+```js
+function Rectangle(length, width){
+  this.length = length;
+  this.width = width;
+}
+
+Rectangle.prototype.getArea = function(){
+  return this.length * this.width;
+};
+
+function Square(length){
+  Rectangle.call(this, length, length);
+}
+
+Square.prototype = Object.create(Rectangle.prototype,{
+  constructor:{
+    value: Square,
+    enumerable: true,
+    writable: true,
+    configurable: true
+  }
+});
+
+var square = new Square(3);
+
+console.log(square.getArea()); //9
+console.log(square instanceof Square); //true
+conaole.log(square instanceof Rectangle); //true
+```
+
+插入知识：Object.create，用所给的原型创建一个新对象的原型，可选参数是被塞进新原型的东西，写法和defineProperty相同。这里用Rectangle的原型作Square的原型，并且指定了constructor属性为Square。使用Object.create是一种所有版本js都支持的单例继承。
+
+上面的例子中，Square继承了Rectangle（通过Rectangle.prototype所创建的新对象来重写Square.prototype，并且调用Rectangle.call方法）使用es6类进行等价的继承：
+
+```js
+class Rectangle{
+  constructor(length,width){
+    this.length = length;
+    this.width = width;
+  }
+ 
+ getArea(){
+   return this.length * this.width;
+ }
+}
+
+class Square extends Rectangle{
+  constructor(length){
+    //与Rectangle.call(this, length, length)相同
+    super(length, length);
+  }
+}
+
+var square = new Square(3);
+```
+
+### 屏蔽类方法
+
+派生类中的方法可以重新定义，这时候通过super.方法名调用基类
