--- a/docs/Fe/react/类.md
+++ b/docs/Fe/react/类.md
@@ -296,3 +296,75 @@ var square = new Square(3);
 ### 屏蔽类方法
 
 派生类中的方法可以重新定义，这时候通过super.方法名调用基类
+
+### 继承静态成员
+
+如果基类包含静态成员，那么这些静态成员在派生类中也是可用的
+
+### 从表达式派生类
+
+只要一个表达式能够返回一个具有【construct】属性以及原型的函数，就可以对其使用extends：
+
+```js
+function Rectangle(length, width){
+  this.length = length;
+  this.width = width;
+}
+
+Rectangle.prototype.getArea = function(){
+  return this.length * this.width;
+};
+
+class Square extends Rectangle{
+  constructor(length){
+    super(length, length);
+  }
+}
+```
+
+### 继承内置对象
+
+ES5继承和ES6继承的不一样之处在于，类继承能够正确地获得内置对象的一些特性。例如ES5及早期版本中，试图继承Array创建自定义数组类型是不能正确工作的：
+
+```js
+// 内置数组的行为 
+var colors = []; 
+colors[0] = "red"; 
+console.log(colors.length); // 1 
+colors.length = 0; 
+console.log(colors[0]); // undefined 
+// 在 ES5 中尝试继承数组 
+function MyArray() { 
+  Array.apply(this, arguments); 
+}
+MyArray.prototype = Object.create(Array.prototype, {
+  constructor: { 
+  	value: MyArray, 
+  	writable: true, 
+  	configurable: true, 
+  	enumerable: true 
+	} 
+}); 
+var colors = new MyArray(); 
+colors[0] = "red"; 
+console.log(colors.length); // 0 
+colors.length = 0; 
+console.log(colors[0]); // "red"
+```
+
+类的设计目的之一就是允许继承内置对象，因此继承模型与以往的有所差异。传统继承中，this的值会先被派生类（例如MyArray）创建，随后基类构造器（例如Array.apply）才被调用。这意味着this一开始就是MyArray的实例，随后才用Array的附加属性对其进行装饰。
+
+基于类的继承中，this的值会先被基类（Array）创建，随后才被派生类的构造器（MyArray）修改。结果就是，this初始就拥有作为基类的内置对象的所有功能：
+
+```js
+class MyArray extends Array{
+  //空的
+}
+
+var colors = new MyArray();
+colors[0] = "red"; 
+console.log(colors.length); // 0 
+colors.length = 0; 
+console.log(colors[0]); // undefined
+```
+
