--- a/docs/Fe/红宝书/22高级技巧2.md
+++ b/docs/Fe/红宝书/22高级技巧2.md
@@ -9,6 +9,8 @@ setTimeout和setInterval创建的定时器其实不是严格的定时器。js其
 
 ### 重复定时器
 
+经过查阅，下文**重复地将代码插入队列**，指的是，使用setInterval来周期地插入，后续所述的规避连续运行，也是setInterval的特性。因此这里的解决方式其实是使用setTimeout模拟了setInterval。[为什么要用setTimeout模拟setInterval](https://segmentfault.com/a/1190000038829248)
+
 当需要重复地定时将代码插入队列时，可能遇到这种问题：上一次插入的代码还没来得及执行，下一次的代码就已经被插入了，导致两次定时事件连续运行。为了避免这种问题，js引擎会在队列中没有该定时器的任何代码时，才将定时器代码添加到队列。这将导致某些间隔会被跳过以及多个定时器的代码执行间隔可能比预期的小。为了避免，可以链式调用setTimeout
 
 ```js
