--- a/docs/lc/周期执行函数.md
+++ b/docs/lc/周期执行函数.md
@@ -1,5 +1,7 @@
 # 周期执行函数
 
+闭包，函数式编程
+
 ```js
 // 周期性的执行一个函数
 
@@ -20,22 +22,26 @@ function repeat(fn, count, time) {
 
 ```js
 function repeat(fn, count, time){
-		var timer = null;
-    var cnt = 0;
-    return function(...args){
-      timer = setInterval(function(){
-        fn.apply(null, args);
-        cnt++;
-        if(cnt>=count){
-          clearInterval(timer);
-        }
-      },time);
-    }
+  var timer = null;
+  var cnt = 0;
+  return function(...args){
+    timer = setInterval(function(){
+      fn.apply(null, args);
+      cnt++;
+      if(cnt>=count){
+        clearInterval(timer);
+      }
+    },time);
   }
+}
 ```
 
 然后搞清楚了setInterval和setTimeout的区别，Interval是周期地插入队列，Timeout只插一次。
 
 怎么说呢，答案还是很好看懂的，感觉看到一个题的时候就有点束手束脚了，不敢动手。
 
-简单描述一下原理：返回一个函数，这就搞出了一个闭包，能拿到repeat的活动对象，然后在返回的函数里面计数并执行函数
+简单描述一下原理：返回一个函数，这就搞出了一个闭包，能拿到repeat的活动对象，然后在返回的函数里面计数并执行传进来的那个函数。当计数超过设定次数的时候把Interval去掉。
+
+## Promise
+
+实际上貌似这题要用Promise做，以后再说。
