--- a/docs/Fe/vue/生命周期.md
+++ b/docs/Fe/vue/生命周期.md
@@ -4,6 +4,24 @@
 
 生命周期钩子有这么几个：beforeCreate，created，beforeMount，mounted，beforeUpdate，updated，beforeDestroy，destroyed。文档里面的[图](https://cn.vuejs.org/v2/guide/instance.html#生命周期图示)就很清楚地描述了它们的关系，这里做出我自己的总结。
 
+::: tip
+本篇在阅读时需要稍微注意，标题是钩子名称但是内容其实是这个钩子之前发生的事情。
+:::
+
+## 更新顺序
+
+这个顺序更多的是钩子触发顺序，实际上每个步骤的工作内容还需要进一步理解
+
+### 渲染过程：
+
+只要理解，子组件是在挂载阶段初始化的就行，在子组件挂载完成后父组件才能完成挂载。我的理解是，父组件得把挂载工作做好才能让子组件挂载（不然子组件往哪挂），只是mounted钩子得子组件mounted了才触发
+
+父 beforeCreate -> 父 created -> 父 beforeMount -> 子 beforeCreate -> 子 created -> 子 beforeMount -> 子 mounted -> 父 mounted
+
+### 子组件更新：
+
+父 beforeUpdate -> 子 beforeUpdate -> 子 updated -> 父 updated
+
 ## beforeCreate
 
 这是第一个钩子，在这个钩子之前，vue合并了用户传给Vue构造函数的所有参数，进行实例初始化，确认父子组件关系，初始化组件的方法，挂在将render函数转换为vnode的方法。
@@ -12,9 +30,29 @@
 
 ## created
 
-第二个钩子，这个钩子触发之前，vue进行了inject和provide初始化（没接触过，好像是和依赖相关的），以及State初始化，包括props，methods，data，computed和watch。state初始化就是把props，methods，data挂载到this上，computed属性添加watcher（后两个state查的不深）。
+第二个钩子，beforeCreate触发后，vue进行了inject和provide初始化（没接触过，好像是和依赖相关的），以及State初始化，包括props，methods，data，computed和watch。state初始化就是把props，methods，data挂载到this上，computed属性添加watcher（后两个state查的不深）。
 
 created之后就能使用this访问data了。但是注意，methods里面不能使用箭头函数，methods方法里的this自动绑定为vue实例，箭头函数绑定的是执行上下文，没有指向vue实例。
 
+## beforeMount
 
+第三个钩子，created触发后，会判断传给构造函数的参数中是否存在el选项，如果不存在就停止编译了，直到在这个实例上调用vm$mount(el)。然后判断template参数，如果有template选项，则这个实例会被作为模板编译成render函数，没有的话就把外部html作为模板来编译。先判断el就是为了让这一步能找到外部html。vue对象里面还有个render选项，在这个里面创建的元素是优先级最高的，其次是template，最后是外部html
+
+## mounted
+
+beforeMount触发后，vue实例被添加$el成员，并且替换掉el。其实不太明白这是个什么意思，这时候应该是把DOM元素都渲染好了吧，可能就是拿真正的元素节点替换了el，el代表要挂载的目标节点？这时候可以通过vm.$el访问el。
+
+有一个细节，beforeMount触发后，this.$el拿到的虽然是dom元素，但是内部的表达式还是通过mustache进行占位的，直到mounted之后才会变成data中的内容，或许可以帮助理解。也就是说，mounted之后才正式可以访问DOM
+
+## 更新钩子
+
+beforeUpdate触发时，实例还没有任何更新动作，触发后，进行虚拟DOM重绘和并修改DOM变化的部分，最后触发updated
+
+## beforeDestroy
+
+很好理解，就是销毁之前触发，这时候实例还完好无损
+
+## destroyed
+
+beforeDestroy触发后，实例的watcher，子组件和监听器都会被解除，解除完毕后触发destroyed
 
