--- a/docs/Fe/vue/生命周期.md
+++ b/docs/Fe/vue/生命周期.md
@@ -22,6 +22,10 @@
 
 父 beforeUpdate -> 子 beforeUpdate -> 子 updated -> 父 updated
 
+## 异步请求
+
+没看源码，但是据说，created和mounted钩子里面进行异步请求是没有区别的，这两个钩子是在同一个tick里面执行的，而ajax请求的时间一定会超过一个tick，即便耗时0ms，那也是在nextTick中更新数据到DOM
+
 ## beforeCreate
 
 这是第一个钩子，在这个钩子之前，vue合并了用户传给Vue构造函数的所有参数，进行实例初始化，确认父子组件关系，初始化组件的方法，挂在将render函数转换为vnode的方法。
