--- a/docs/lc/数组扁平化.md
+++ b/docs/lc/数组扁平化.md
@@ -84,4 +84,23 @@ str = '[' + str + ']'  // "[1,2,3,4,5]"
 let arr = JSON.parse(str) // [1, 2, 3, 4, 5]
 ```
 
-正则表达式需要系统学习！
+正则表达式需要系统学习！（竖线是分组捕获，但是我还不理解这玩意）
+
+# 5.缩小方法
+
+```js
+let array = [1, [2, [3, [4, 5]]]]
+
+function flatten(arr) {
+    return arr.reduce(function (prev, next) {
+        return prev.concat(Array.isArray(next) ? flatten(next) : next)
+    }, [])
+}
+
+console.log(flatten(array))  // [1, 2, 3, 4, 5]
+```
+
+其实还是递归，只是不用自己写遍历了，也不用开辟一个专门的变量用来存，缩小方法自己就带着迭代内容。
+
+
+
