--- a/docs/lc/数组扁平化.md
+++ b/docs/lc/数组扁平化.md
@@ -86,7 +86,7 @@ let arr = JSON.parse(str) // [1, 2, 3, 4, 5]
 
 正则表达式需要系统学习！（竖线是分组捕获，但是我还不理解这玩意）
 
-# 5.缩小方法
+## 5.缩小方法
 
 ```js
 let array = [1, [2, [3, [4, 5]]]]
@@ -102,5 +102,27 @@ console.log(flatten(array))  // [1, 2, 3, 4, 5]
 
 其实还是递归，只是不用自己写遍历了，也不用开辟一个专门的变量用来存，缩小方法自己就带着迭代内容。
 
+## 6.Generator函数
 
+```js
+function* iterTree(tree) {
+  if (Array.isArray(tree)) {
+    //如果输入是个数组
+    for(let i=0; i < tree.length; i++) {
+      //取得每个数组元素的遍历器对象
+      yield* iterTree(tree[i]);
+    }
+  } else {
+    //不是数组，说明已经是元素了，直接产出
+    yield tree;
+  }
+}
 
+let array = [1, [2, [3, [4, 5]]]];
+[...iterTree(array)];
+//[ 1, 2, 3, 4, 5 ]
+```
+
+直接偷的阮一峰。
+
+这个例子值得琢磨一下，让yield*的理解更透彻
