--- a/docs/Fe/不js/提升.md
+++ b/docs/Fe/不js/提升.md
@@ -1,2 +1,63 @@
 # 提升
 
+定义声明会被提升，但是赋值声明不会。
+
+```js
+a = 2
+var a
+console.log(a)
+```
+
+会输出2。
+
+var a = 2这句话，会被看成两个声明，var a和a = 2，第一个声明（定义）是在编译阶段进行的，它会被提升至作用域的顶部，第二个声明（赋值）会留在原地等待执行。看看下一个片段：
+
+```js
+console.log(a)
+var a = 2
+```
+
+这回不会输出2了，如果理解了上面的提升规则，就会发现，应该输出undefined。既不是2，也不是引用异常，因为a的定义声明被提升了，而a = 2没有，因此在执行时代码时这样的：
+
+```js
+var a
+console.log(a)
+a = 2
+```
+
+函数声明也会被提升（函数表达式不会，因为它是个赋值操作）
+
+同名的函数和变量声明，函数声明会被提升：
+
+```js
+foo()
+var foo
+function foo(){
+  console.log(1)
+}
+foo = function(){
+  console.log(2)
+}
+```
+
+会输出1，被理解为如下：
+
+```js
+function foo(){
+  console.log(1)
+}
+foo()
+foo = function(){
+  console.log(2)
+}
+```
+
+虽然var foo出现在前面，但是重复的声明中，函数更优先，所以它被忽略了
+
+## let
+
+let不会被提升，所以在let声明之前的该作用域中使用变量是不能用的。
+
+let/const声明的变量会先在作用域中创建，但还没有进行词法绑定，不能访问。
+
+对一个稍后使用let声明对变量使用typeof会导致出现引用异常错误（而不是返回undefined字符串）
