--- a/docs/面/自我介绍.md
+++ b/docs/面/自我介绍.md
@@ -1,5 +1,20 @@
+# 自我介绍
+
 电子科技大学大三，软件工程，大一接触前端，目前持续在学习前端相关的知识
 
-### 过程
+## 过程
 
 大一开始看视频了解html和css，入门了js，浅看红宝书前7章。开始接触项目，从原生js到框架（vue），后续接触组件库和工具库。另外也有做过几个小程序项目。大二下学期经过一次面试之后了解到自己的不足，开始细看红宝书，了解es6，开始了解框架原理（vue），接触react和nodejs（练习项目）
+
+## JS目录
+
+*  7个基本类型：数值，布尔，字符串，null，undefined，symbol，bigint
+* 基本包装类型（String，Number，String）便于调用基本数据类型的方法，调用完了就销毁
+* ES6特性
+  * let/const，块级作用域
+  * 箭头函数：this绑定词法作用域（在原型上添加方法不能用箭头函数）
+  * 类语法：继承的语法糖
+    * super通过组合继承完成静态属性绑定
+    * extend通过寄生继承指定实例原型的形式完成方法继承
+    * static静态方法不会挂载到原型，而是直接挂载在实例
+
