--- a/docs/Fe/engine/事件循环.md
+++ b/docs/Fe/engine/事件循环.md
@@ -1,2 +1,92 @@
 # 事件循环
 
+同步任务会按照顺序进入执行栈，执行完毕后出栈：
+
+```js
+function a(){
+  b()
+  console.log('a')
+}
+function b(){
+  console.log('b')
+}
+a()
+```
+
+1. a函数入栈
+2. a中的b入栈
+3. 执行b，console.log('b')入栈
+4. 输出b，console.log('b')出栈
+5. b执行完毕，出栈
+6. console.log('a')入栈，输出a，出栈
+7. a执行完毕，出栈
+
+## 事件队列
+
+遇到异步任务后，会将异步任务挂起（其它Api接管，如计时器，监听器等），继续执行执行栈的任务。异步任务的返回结果会进入事件队列，等到执行栈空了，主线程空闲下来，就会去事件队列里面按顺序把它们的回调放入执行栈。从事件队列取得任务并执行的过程就是一次事件循环，事件循环将任务区分为宏任务和微任务。
+
+## 宏任务和微任务
+
+就是说，各种任务还是有轻重缓急的，所以还是得分两种队列，一个放微任务，它们会在一个事件循环中优先于宏任务执行，另一个就是宏任务队列。
+
+宏任务有：setTimeout  setInterval  postMessage  xmlHttpRequest  I/O  UI交互事件（DOM事件）
+
+微任务有：Promise.then()回调  MutationObserver
+
+## 事件循环
+
+根据异步事件的类型，它们会进入不同的队列。
+
+当执行栈空时，主线程会查看微任务队列是否有事件，
+
+* 如果存在，依次执行队列中的事件回调，直到清空微任务队列，然后去宏任务队列取出最前面的事件回调加入调用栈
+* 如果不存在，那就直接去宏任务队列取出第一个事件的回调加入调用栈
+
+执行栈被执行完毕后会立刻处理所有微任务队列的事件，然后再去宏任务队列取出一个事件。同一个事件循环中，微任务永远在宏任务之前执行。
+
+在事件循环中，每一次循环被成为tick，每次tick的关键步骤如下：
+
+* 执行一个宏任务（如果执行栈没有就从宏任务队列中取第一个）
+* 执行过程中遇到微任务，就把它添加到微任务队列
+* 宏任务执行完毕后，立刻执行微任务队列中的所有微任务（按进入顺序）
+* 检查渲染，然后主线程去执行UI渲染工作（如果有）
+* 执行下一个宏任务
+
+```js
+console.log('start')
+
+setTimeout(function() {
+  console.log('setTimeout')
+}, 0)
+
+Promise.resolve().then(function() {
+  console.log('promise1')
+}).then(function() {
+  console.log('promise2')
+})
+
+console.log('end')
+```
+
+1. 全局代码入栈，执行console.log('start')
+2. setTimeout设置的回调进入宏任务队列，Promise.then()进入微任务队列，最后执行console.log('end')
+3. 此时调用栈代码执行完毕，开始执行微任务队列，输出promise1，然后下一个then进入微任务队列，为了清空微任务队列，promise2也会被输出
+4. 这时候会执行UI渲染（如果需要）然后开始下一轮事件循环，执行宏任务队列内的setTimeout回调，输出setTimeout
+
+有一种说法，每个宏任务都单独关联一个微任务队列，而且还引入了层级的概念。我目前并不是特别认可，因为每个循环微任务队列都会被清空，执行了宏任务之后就该下一个循环了。这样理解感觉会更复杂。
+
+## node的事件循环
+
+node的宏任务有：setImmediate  setTimeout  setInterval  script（整体代码）  I/O操作
+
+微任务有：process.nextTick  Promise.then
+
+循环内容也不太一样：
+
+1. 定时器检查阶段，setTimeout和setInterval回调
+2. I/O回调
+3. 轮询，等待新的I/O，没有其它异步任务就会停在这个阶段
+4. 检查，setImmediate回调在这里执行
+5. 关闭事件回调，执行close事件的回调
+
+process.nextTick是一个独立队列，在每个循环阶段完成之后都会去检查这个队列，如果里面有任务，就会让它优先于微任务执行。
