--- a/docs/Fe/es6/箭头函数.md
+++ b/docs/Fe/es6/箭头函数.md
@@ -1,2 +1,14 @@
 # 箭头函数
 
+对象里面的方法不可以用箭头函数，例如：
+
+```js
+name = 'global name'
+const obj = {
+  name: 'name'
+  sayName: ()=> console.log(this.name)
+}
+obj.sayName() // global name
+```
+
+因为这里的词法作用域就是全局环境
