--- a/docs/面/自我介绍.md
+++ b/docs/面/自我介绍.md
@@ -17,4 +17,31 @@
     * super通过组合继承完成静态属性绑定
     * extend通过寄生继承指定实例原型的形式完成方法继承
     * static静态方法不会挂载到原型，而是直接挂载在实例
+  * 增强对象字面量：直接使用变量/函数名作为属性和方法，getter和setter
+  * Map和Set
+    * Map：set，get，has，delete，size，for of 迭代的时候按插入的顺序
+    * Set：add，has，delete，size，for of 也是按插入顺序
+  * WeakMap，WeakSet
+    * WeakMap只能把对象引用作为key，它不能迭代
+    * WeakSet只能储存对象引用，不能遍历
+    * 垃圾回收的时候不会考虑它们的引用
+  * 模板字符串
+  * 其它：剩余参数，扩展运算符，解构赋值，Proxy，Reflect，Symbol
+* 闭包
+* 判断类型的方法
+  * tyoepf 判断基本类型信息，以及函数和对象
+  * instanceof 左边的值是不是右边的实例
+  * Object.prototype.toString.call 对象的内部类型
+* Object.prototype.hasOwnProperty.call 用这个确定属性是自己的还是原型链上的
+* 原型链
+  * 每个js对象（除了null）都有一个原型（\_proto\_)
+  * prototype是函数的原型对象，这个函数作为构造函数使用的时候，prototype会成为生成的实例的原型（\_proto\_)
+  * 把一个对象的原型设置为另一个对象，就把另一个对象的原型上的东西也继承到了
+  * 函数.\_proto\_ === Function.prototype: Function是所有函数的构造函数
+  * Function.\_proto\_ === Function.prototype：Function也是函数
+  * 实例对象.\_proto\_===构造函数.prototype
+  * Object.\_proto\_===Function.prototype：Object也是函数
+  * Object.prototype.\_proto\_===null：原型链的终点
+* instanceOf原理：不停地取左值的\_proto\_，每次将其与右值的prototype比较
+* 消息队列和事件循环
 
