--- a/docs/面/自我介绍.md
+++ b/docs/面/自我介绍.md
@@ -6,6 +6,15 @@
 
 大一开始看视频了解html和css，入门了js，浅看红宝书前7章。开始接触项目，从原生js到框架（vue），后续接触组件库和工具库。另外也有做过几个小程序项目。大二下学期经过一次面试之后了解到自己的不足，开始细看红宝书，了解es6，开始了解框架原理（vue），接触react和nodejs（练习项目）
 
+## 网络
+
+* 三次握手四次挥手
+* 跨域
+* Http请求（get，post，restful）
+* Http2，Https
+* Http缓存
+* TCP拥塞控制
+
 ## JS目录
 
 *  7个基本类型：数值，布尔，字符串，null，undefined，symbol，bigint
@@ -44,4 +53,5 @@
   * Object.prototype.\_proto\_===null：原型链的终点
 * instanceOf原理：不停地取左值的\_proto\_，每次将其与右值的prototype比较
 * 消息队列和事件循环
+* v8模型
 
