--- a/docs/Fe/es6/箭头函数.md
+++ b/docs/Fe/es6/箭头函数.md
@@ -12,3 +12,21 @@ obj.sayName() // global name
 ```
 
 因为这里的词法作用域就是全局环境
+
+## 箭头函数词法
+
+根据外层函数或者全局作用域来决定this。箭头函数可以像bind一样确保this被绑定到词法环境里，它取代的是es6之前被使用的词法作用域方式：
+
+```js
+function foo(){
+  var self = this;
+  setTimeout(function(){
+    console.log(self.a)
+  },100)
+}
+```
+
+确保代码风格一致是十分重要的，在同一个函数或程序中，以下两种编码方式最好只居其一：
+
+1. 只使用词法作用域及箭头函数
+2. 尽量避免self = this和箭头函数，转而使用bind
