--- a/docs/Fe/react/调和.md
+++ b/docs/Fe/react/调和.md
@@ -28,7 +28,9 @@ commit阶段中，react中有三棵fiber树：
 
 - workInProgress fiber tree：更新工作中，会遍历current fiber tree，为每一个节点创建一个替代节点（可能和原来的节点相同），这些替代节点形成workInProgress fiber tree
 
-- effect list fiber tree：workInProgress fiber tree的子树，保存workInProgress fiber tree中真正有更新的节点。
+- effect list fiber tree：workInProgress fiber tree的子树，保存workInProgress fiber tree中真正有更新的节点
+
+diff实际上就发生在构建wIP tree的时候，详细的diff内容专门开了diff篇
 
 commit阶段的任务就是遍历effect list，把更新同步至DOM。
 
