--- a/docs/lc/深浅拷贝.md
+++ b/docs/lc/深浅拷贝.md
@@ -35,6 +35,10 @@ console.log(res == o);
 
 总之就是递归，判断数组和对象，然后组合使用for in和hasOwnProperty遍历所有key（还记得吗，for in会遍历对象上的所有属性，包括继承来的）
 
+### JSON.stringify()
+
+缺点是对象中的函数，symol，undefined都会消失。
+
 ## 浅拷贝
 
 使用扩展运算符或者assign
@@ -51,3 +55,38 @@ let objAssign = Object.assign({}, o)
 ```
 
 需要说明的是，扩展运算符在es6引入，使用的是遍历器接口，但是对象不具有遍历器接口，所以理应不能这么搞。经过查询，es2018为对象解构提供了和数组一样的剩余参数和展开运算符。
+
+### slice
+
+```js
+let arr = [1,2,3,4];
+console.log(arr.slice()); // [1,2,3,4]
+console.log(arr.slice() === arr); //false
+```
+
+使用不带参数的slice能实现数组的浅拷贝
+
+### concat
+
+利用concat返回新数组的特性也能实现数组浅拷贝
+
+```js
+let arr = [1, 2, 3, 4]
+console.log()
+```
+
+### 手动浅拷贝
+
+```js
+function copy(object){
+  if(!object || typeof object !== "object") return
+  let newObj = Array.isArray(object) ? [] : {}
+  for(let key in object){
+    if(object.hasOwnProperty(key)){
+      newObj[key] = object[key]
+    }
+  }
+  return newObject
+}
+```
+
