--- a/docs/lc/数组扁平化.md
+++ b/docs/lc/数组扁平化.md
@@ -11,8 +11,7 @@ function flatten(arr) {
         if (Array.isArray(arr[i])) {
             result = result.concat(flatten(arr[i]))
           	// 是数组，把递归结果连接到result
-        }
-        else {
+        }else {
             result.push(arr[i])
           	// 不是数组，直接塞进result
         }
@@ -102,7 +101,46 @@ console.log(flatten(array))  // [1, 2, 3, 4, 5]
 
 其实还是递归，只是不用自己写遍历了，也不用开辟一个专门的变量用来存，缩小方法自己就带着迭代内容。
 
-## 6.Generator函数
+另外需要注意⚠️ 缩小方法的初始值并不一定需要是数字！它只是第一次reduce的时候作为累计值，比如这里，首次reduce就是在一个空数组上执行concat
+
+## 6.toString
+
+很神奇吧，toString能把嵌套的数组变成连续的字符串，麻烦就麻烦在它split之后数组的每个项都是字符串形式的数字，需要给他变成数字。
+
+```js
+function flatten(arr){
+  const flattened = arr.toString().split(',')
+  for(let i = 0; i < flattened.length; i++){
+    arr[i] = parseInt(arr[i], 10)
+  }
+  return flattened
+}
+```
+
+没反应过来，再开一个数组不如直接map，map就是返回一个新数组，这样写是最简洁的。说明我对array的api还不熟练
+
+```js
+function flatten(arr){
+  return arr.toString().split(',').map((item)=>parseInt(item, 10))
+}
+```
+
+~~而且forEach疑似不能对每个项做修改，如果嗯要用forEach可能需要再开一个数组，直接for还能原地解决：~~
+
+```js
+function flatten(arr){
+  const stringArr = arr.toString().split(',')
+  const flattened = []
+	stringArr.forEach((item) => {
+    flattened.push(parseInt(item, 10))
+  })
+  return flattened
+}
+```
+
+
+
+## 7.Generator函数
 
 ```js
 function* iterTree(tree) {
