--- a/docs/lc/数组乱序.md
+++ b/docs/lc/数组乱序.md
@@ -18,6 +18,19 @@ arr.sort(()=>Math.random()-0.5)
 
 ## 随机交换
 
+原本的在下边，优化了一下，获取要交换的随机索引时排除已经交换过的 i 个项，同时生成的随机数也可以减少。另外使用了解构赋值，节省了临时变量：
+
+```js
+function rand(arr){
+  for(let i = 0; i < arr.length; i++){
+    let randomIndex = Math.floor(Math.random()*(arr.length - i)) + i
+    [arr[i], arr[randomIndex]] = [arr[randomIndex], arr[i]]
+  }
+}
+```
+
+
+
 ```js
 function rand(arr){
   for(let i = 0; i < arr.length; i++){
