--- a/docs/lc/数组去重.md
+++ b/docs/lc/数组去重.md
@@ -4,3 +4,19 @@
 [...new Set(arr)]
 ```
 
+ES5没有set怎么办呢？使用对象的hasOwnProperty！
+
+```js
+function uniqeArr(arr){
+  const map = {}
+  const res = []
+  arr.forEach((item) => {
+    if(!map.hasOwnProperty(item)){
+      map[item] = item // 这个值放啥都没所谓，我们只用property的唯一性
+      res.push(item)
+    }
+  })
+  return res
+}
+```
+
