--- a/docs/lc/数组方法.md
+++ b/docs/lc/数组方法.md
@@ -13,6 +13,21 @@ function myFlat(arr, depth){
 
 我自己想的，感觉很不错！注意单层扁平化的操作是[].concat(...array)
 
+又想了一下，可以改成循环：
+
+```js
+function myFlat(arr, depth){
+  let res = arr
+  while(depth > 0){
+    res = [].concat(...res)
+    depth--
+  }
+  return res
+}
+```
+
+
+
 ## push
 
 ```js
