--- a/docs/Fe/engine/事件循环.md
+++ b/docs/Fe/engine/事件循环.md
@@ -52,6 +52,12 @@ a()
 * 检查渲染，然后主线程去执行UI渲染工作（如果有）
 * 执行下一个宏任务
 
+对于第一步存在一个理解歧义需要解释一下：首先说明，微任务总是先于宏任务执行，这句话是对的，只是有一个条件：同一段代码中设置的微任务和宏任务，微任务先于宏任务执行
+
+为什么步骤中循环的开始是一个宏任务呢？因为在执行栈上工作可以看成是在完成一个宏任务，得先有这个宏任务，才能有之后诞生的（由段代码设置的）其它宏任务和微任务。下面的例子能够帮助理解，首先是全局作用域入栈，就对应了tick中的第一步执行宏任务。
+
+另外需要注意的是，微任务先于宏任务执行，但是它们是两个事件循环中的任务，因为中间夹着渲染步骤
+
 ```js
 console.log('start')
 
