--- a/docs/Fe/react/调和.md
+++ b/docs/Fe/react/调和.md
@@ -20,7 +20,11 @@ render是没有副作用的，react可以调度的任务都处于render阶段，
 
 构建workInProgress fiber tree的过程就是在render阶段进行的
 
+此阶段就是scheduler的工作阶段，处理fiber树的变化，更新fiber节点。关于处理fiber的细则，请阅读fiber篇
+
 ### commit
+
+处理在fiber树上工作时产生的副作用（更新DOM等）
 
 commit阶段中，react中有三棵fiber树：
 
@@ -32,7 +36,25 @@ commit阶段中，react中有三棵fiber树：
 
 diff实际上就发生在构建wIP tree的时候，详细的diff内容专门开了diff篇
 
-commit阶段的任务就是遍历effect list，把更新同步至DOM。
+commit阶段的任务就是遍历effect list，把更新同步至DOM，也就是经常提到的，处理effect
 
 首先有一个pre-commit阶段，获取当前DOM的快照。接下来执行需要卸载组件的componentWillUnmount方法，接着根据effect list将current fiber tree替换为workInProgress fiber tree。最后根据current fiber tree修改DOM，为新增的节点执行componentDidMount，为更新的节点执行componentDidUpdate
+
+实际上commit阶段分了三个部分：beforeMutation，mutation和layout阶段，分别对应执行DOM操作之前，执行DOM操作，执行DOM操作之后：
+
+### beforeMutation
+
+遍历effectList，调用commitBeforeMutationEffects处理DOM渲染的autoFocus和blur逻辑（但是这时候不是DOM还没更新吗），调用getSnapshotBeforeUpdate钩子（这是一个获取更新前props和state的钩子），它代替那些因为fiber架构导致可能多次触发的钩子，在commit阶段，是同步运行的。
+
+另外，before Mutation还调度useEffect，把它的工作送进scheduler，等到layout阶段再真正执行这些effect。useEffect是被异步调用的，因为如果同步将阻塞浏览器渲染
+
+### mutation
+
+遍历effectList，调用commitMutationEffects，它重置文本节点，更新ref（一种保持DOM节点引用的东西），根据effectTag进行增删更新
+
+### layout
+
+遍历effectList，调用commitLayoutEffects，它调用生命周期钩子等等，根据effectTag，调用setState或是hook设置的回调函数，再将新的ref连接到DOM上
+
+最后整个commit阶段结束，进行fiber树的切换
 
