--- a/docs/面/自我介绍.md
+++ b/docs/面/自我介绍.md
@@ -1,10 +1,14 @@
 # 自我介绍
 
-电子科技大学大三，软件工程，大一接触前端，目前持续在学习前端相关的知识
+电子科技大学大三，软件工程，大一加入工作室，开始接触前端，目前持续在学习前端相关的知识
+
+ES6，了解过vue，react源码，v8
 
 ## 过程
 
-大一开始看视频了解html和css，入门了js，浅看红宝书前7章。开始接触项目，从原生js到框架（vue），后续接触组件库和工具库。另外也有做过几个小程序项目。大二下学期经过一次面试之后了解到自己的不足，开始细看红宝书，了解es6，开始了解框架原理（vue），接触react和nodejs（练习项目）
+大一开始看视频了解html和css，入门了js，浅看红宝书前7章。借助开始接触项目，从原生js到框架（vue），后续接触组件库和工具库。另外也有做过几个小程序项目以及它们的后台管理系统等。我认为这段时期处于懵懂期，前端知识并不完全理解，通过项目解决的问题也是不知所以然的。但是这样的过程中也收获了很多，至少一个一个的项目让我对前端越来越熟悉，方便了后续相对系统的学习过程
+
+大二下学期经过一次面试之后了解到自己的不足，开始细看红宝书，了解es6，开始了解框架原理（vue），接触react和nodejs（练习项目），了解react原理，以及v8的工作内容等
 
 ## 网络
 
