--- a/docs/面/12-14字节1.md
+++ b/docs/面/12-14字节1.md
@@ -11,3 +11,5 @@
 最后问我希望进行哪些方向的工作，答前端相关的都行，有兴趣
 
 反问面试官如何评价我，答不好说，与面试结果有关，顺势问了如何深入学习（因为感觉目前有点偏广但是了解不深入）面试官说能按兴趣学是很好的，建议深入最有兴趣的部分，不需要按照公司的需求来学习。
+
+问的比较偏js本身而不是框架。
