--- a/docs/面/12-14字节1.md
+++ b/docs/面/12-14字节1.md
@@ -2,7 +2,7 @@
 
 飞书前端
 
-开局自我介绍，讲了学前端的过程，以gc结尾的（因为最近刚看）所以就聊了一下gc细节，引用计数，闭包啥的，然后聊了下v8解析js。再下来是项目，聊了失物招领
+开局自我介绍，讲了学前端的过程，以gc结尾的（因为最近刚看）所以就聊了一下gc细节，引用计数，闭包啥的，然后聊了下v8解析js，事件循环宏任务微任务也简单问了下。再下来是项目，聊了失物招领
 
 之后基础部分问的是this指向
 
