note: match string

--- a/docs/lc/5最长回文子串.md
+++ b/docs/lc/5最长回文子串.md
@@ -1,3 +1,11 @@
+# 5最长回文子串 dp
+
+给你一个字符串 `s`，找到 `s` 中最长的回文子串。 
+
+https://leetcode.cn/problems/longest-palindromic-substring/?favorite=2cktkvj
+
+关于动态规划，本宝参考了 [这篇](https://zhuanlan.zhihu.com/p/137992855)
+
 里面说：动态规划就是“递归 + 记忆化”，把每一层递归的状态存下来，就不用在递归的时候重复求解之前算过的内容。
 
 参考了本题的答案后，通过推演示例的解认识动态规划
